--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0",
+    "conf": "^13.1.0",
+    "mongoose": "^8.9.1"
+  },
+  "bin": {
+    "mongo-seeder": "./bin/index.js"
+  }
 }
